--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,198 @@
-html {
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 0;
+* {
+  font-family: "Public Sans", sans-serif;
   margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
-header {
-  background-color: brown;
-  padding: 15px;
-  margin: 10px;
-  color: #fff;
-  width: 95%;
-  text-align: center;
+.wrapper {
+  max-width: 1024px;
+  margin: 10px auto;
 }
+
+/* header */
+
+.header {
+  background-color: rgb(255, 255, 255);
+}
+
+#user {
+  border-radius: 40%;
+  width: 150px;
+}
+
+.nav-list {
+  display: flex;
+  list-style: none;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  background-color: #87ceeb;
+}
+
+.nav-link {
+  padding: 0 20px;
+  line-height: 50px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
+.nav-link:hover {
+  color: brown;
+  transform: translate(0, 3px);
+}
+
+.heading {
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  margin: 5px;
+}
+
+.front {
+  font-size: 40px;
+  padding: 20px;
+}
+/* main */
 
 main {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
 }
 
-img {
-  width: 50%;
+.left-side {
+  width: 40%;
+  text-align: justify;
+}
+
+.right-side {
+  width: 60%;
+  text-align: justify;
+}
+
+section {
+  padding: 10px;
+  margin: 5px 10px;
+  border-radius: 30px;
+}
+
+.title {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  margin: 5px auto;
+}
+
+#contact {
+  background-color: #8b0000;
+}
+
+.contact-item,
+.skill-item {
+  list-style: none;
+  color: white;
+  margin: 10px;
+}
+
+#skills {
+  background-color: #ff6347;
+}
+
+.skill-item {
+  text-align: center;
+}
+
+#about {
+  background-color: #f08080;
+}
+
+#code {
+  background-color: #4169e1;
+}
+
+.code {
+  background-color: #e6e6fa;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+}
+
+#projects {
+  background-color: #3cb371;
+  text-align: justify;
+}
+
+#projects > a {
+  margin-left: 10px;
+}
+
+#projects > p {
+  color: #fffafa;
+  margin: 10px;
+}
+
+.subtitle {
+  padding: 10px;
+  line-height: 25px;
+  color: #fffafa;
+  text-align: justify;
+}
+
+#education {
+  background-color: #da70d6;
+}
+
+th {
+  color: #f8f8ff;
+  padding: 12px;
+}
+
+td {
+  color: #f8f8ff;
+}
+
+.link {
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  transition: 0.3s;
+}
+.link:hover {
+  color: #87ceeb;
+  transform: translate(1px, 2px);
+}
+
+/* footer */
+
+footer {
+  font-size: 25px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 150px;
+}
+
+#logo {
+  height: 25px;
+}
+
+.link-git {
+  color: #57606a;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+/* media */
+
+@media (max-width: 768px) {
+  .left-side,
+  .right-side {
+    width: 100%;
+  }
+  .nav-list {
+    justify-content: space-around;
+    font-size: 7px;
+  }
 }
